--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>A Pacific-Northwesterner with the soul of an artist/intersectional environmentalist and the mind of a conscientious accountant, I believe in creating functional beauty through order. A mixture of hard work, privilege, and luck has allowed me to thrive in the world of nonprofit management, with a focus on Finance & Administration, branching out into Web Product Manager, administrator of donor/POS management systems, sales, and a plethora of “other duties, as assigned.”<br><br>After taking a few years to support my family in the home environment to take stock of my innate and developed skills and goals, I’m eager to develop skills in coding to bring additional value to my professional offerings. The Full Stack Boot Camp through the University of Washington is providing me with the skills, tutelage, and community of students and educators that I need to make this vision a reality.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Duvall, WA, USA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Ballet and modern dance, theatre, volunteering, dragon boat, white water rafting, archery, urban hiking, reading, and now...coding.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Creating innovative arts, environmental justice, educational, and informational-sharing platforms from a Paris apartment filled with artists and innovator friends would be the ideal, but until then…<br><br>I’m seeking a team environment in a medium-to-large company that will push me to learn quickly, provide a pool of mentors and allow me to gain as much experience as I can over the next 5 years. I expect that the process will allow me to develop clarity around which of my skills are the most marketable and impactful so that I can evaluate my broader career trajectory with an eye toward making a positive contribution to projects that most interest me.<br><br>I thrive in environments that challenge me, with clear deadlines and high expectations of all staff.<br><br>In return, I seek a healthy wage, respect among colleagues, and the opportunity to grow.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA, USA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I believe in being useful, and our world runs on data, ideas, and the ability to communicate clearly and quickly.<br><br>In times where many of our challenges are global and solutions are local, I want the skills to facilitate connection and innovation, to connect problems to problem-solvers, and to connect content with those who need it in order to make a significant contribution to the betterment of the quality of life for all. I want to help us better understand each other, to share skills, knowledge, and the stories that contain them.
+        </p>
     </section>
 
     <footer id="footer">
